--- a/WareHouseNJsound/Views/Home/Index.cshtml
+++ b/WareHouseNJsound/Views/Home/Index.cshtml
@@ -97,10 +97,13 @@
                 <th>Picture</th>
                 <th>Name</th>
                 <th>Category</th>
+                <th>Type</th>
                 <th>Unit</th>
                 <th>Stock</th>
                 <th>MinimumStock</th>
                 <th>Price</th>
+                <th>ReceivedDate</th>
+                <th>WarrantyExpiryDate</th>
                 <th>Remark</th>
                 
             </tr>
@@ -128,10 +131,14 @@
                     </td>
                     <td style="text-align: left;">@item.MaterialsName</td>
                     <td>@item.Category.CategoryName</td>
+                    <td>@item.Type.TypeName</td>
                     <td>@item.Unit.UnitName</td>
                     <td>@(item.Stock?.OnHandStock ?? 0)</td>
                     <td>@item.MinimumStock</td>
                     <td>@(item.Price ?? 0)</td>
+                    <td>@item.ReceivedDate.ToString("yyyy/MM/dd")</td>
+                    <td>@item.WarrantyExpiryDate.ToString("yyyy/MM/dd")</td>
+
                     <td>@item.Description</td>
                     <td>
                         <a asp-action="Edit" asp-route-id="@item.Materials_ID" title="แก้ไข" class="text-warning" style="margin-right: 10px;">
