--- a/WareHouseNJsound/Views/Shared/_Layout.cshtml
+++ b/WareHouseNJsound/Views/Shared/_Layout.cshtml
@@ -120,7 +120,7 @@
                             <i class='icon bx bxs-store-alt'></i><span class="text nav-text" style="font-family: 'Noto Sans Thai', sans-serif;">คลังสินค้า</span>
                         </a>
                     </li>
-                    <li id="Requests" class="nav-link" onclick="location.href='@Url.Action("Create", "Request")'">
+                    <li id="Requests" class="nav-link" onclick="location.href='@Url.Action("Create2", "Request")'">
                         <a href="#" class="@(currentController == "Request" && currentAction == "Create" ? "active" : "")">
                             <i class='icon bx bx-mail-send'></i><span class="text nav-text" style="font-family: 'Noto Sans Thai', sans-serif;">เบิกสินค้า</span>
                         </a>
