--- a/WareHouseNJsound/Views/Home/Index.cshtml
+++ b/WareHouseNJsound/Views/Home/Index.cshtml
@@ -126,7 +126,7 @@
                         }
                         else
                         {
-                            <span>ไม่มีรูป</span>
+                            <img src="~/img/no-image.jpg" style="max-width:80px; max-height:60px;" />
                         }
                     </td>
                     <td style="text-align: left;">@item.MaterialsName</td>
